--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ continuously improving as a developer.
             <a href="https://www.unileverdigital.com/arabia/mangrove/index.html" target="_blank">Mangroves Microsite</a>
           </div>
           <div class="project-details col-md-4 my-1">
-            <a href="unileverdigital.com/tr/algida-maras/index.html" target="_blank">Maraş Usulü</a>
+            <a href="https://www.unileverdigital.com/tr/algida-maras/index.html" target="_blank">Maraş Usulü</a>
           </div>
           <div class="project-details col-md-4 my-1 project-details-white">
             <a href="https://amirasalah98.github.io/maras-usulii/" target="_blank">Maraş Usulü (Another design)</a>
